# multi-modal

image-classification/: README.md  example.py  pyproject.toml  requirements.txt
image-classification/.claude/: settings.local.json
image-classification/configs/: config.yaml
image-classification/data/: re_id_1000_test.txt  re_id_1000_train.txt
image-classification/logs/tensorboard/: events.out.tfevents.1763264903.MAC-BD-HENRY.57624.0  events.out.tfevents.1763333903.MAC-BD-HENRY.31790.0  events.out.tfevents.1763380812.MAC-BD-HENRY.51095.0
image-classification/src/: __init__.py  evaluate.py  train.py
image-classification/src/data/: __init__.py  dataset.py
image-classification/src/models/: __init__.py  resnet.py
image-classification/src/utils/: __init__.py  device.py  metrics.py
nlp-classification/: .README.md.swp  README.md  main.py  pyproject.toml  pytest.ini
nlp-classification/.claude/: settings.local.json
nlp-classification/data/raw/: training.csv
nlp-classification/outputs/: cv_results.json  evaluation_report.txt  label_encoder.joblib  metrics.json  vocabulary.joblib
nlp-classification/outputs/models/: naive_bayes_model.joblib
nlp-classification/scripts/: train.py
nlp-classification/src/: config.py
nlp-classification/src/data/: dataset.py  loader.py  preprocessor.py
nlp-classification/src/models/classical/: __init__.py  base.py  logistic_regression.py  naive_bayes.py  svm.py
nlp-classification/src/training/: cross_validator.py  evaluator.py  trainer.py
nlp-classification/src/utils/: device.py
(+4 files in other folders)
